# cmake-c

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main  main.c  pre_test.sh  run_test.sh
database/: test-db
include/shared/: first.h  frist.h
include/static/: hello.h
src/: first.c  frist.c  hello.c  main.c
